# defopt

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  defopt.py  gen_defopt_napoleon.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  test_defopt.py
.github/workflows/: build.yml
doc/: requirements.txt
doc/source/: api.rst  changelog.rst  conf.py  examples.rst  features.rst  index.rst
docs/: Makefile  api.rst  changelog.rst  conf.py  examples.rst  features.rst  index.rst  make.bat
examples/: annotations.py  booleans.py  choices.py  dataclass.py  enums.py  exceptions.py  lists.py  nested.py  parsers.py  partials.py  short.py  starargs.py  styles.py
lib/: _defopt_napoleon.py  defopt.py
lib/defopt/: __init__.py  __main__.py  _napoleon.py
src/: defopt.py
tests/: test_defopt.py
tests/test_napoleon/: __init__.py
tests/test_napoleon/docs/source/: conf.py  index.rst  tests.napoleon.rst  tests.rst
tests/test_napoleon/napoleon/: test_docstring.py  test_napoleon.py
tests/test_napoleon/tests/docs/source/: modules.rst
